--- a/Client/pages/feedback.html
+++ b/Client/pages/feedback.html
@@ -34,7 +34,7 @@
 
       
 
-      <form action="submit_feedback.php" method="POST">
+      <form method="POST">
         <label for="name">Your Name:</label>
         <input type="text" id="name" name="name" required>
         
@@ -49,8 +49,6 @@
     </section>
   </main>
 
-  <footer>
-    <p>Contact us at feedback@example.com</p>
-  </footer>
+  
 </body>
 </html>
